--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -21,7 +21,7 @@
   <title>Document</title>
 </head>
 
-<body>
+<body style="background-color: #e6dace;">
   <!-- Navbar -->
   <nav class="navbar" id="header">
     <div class="container-fluid">
@@ -48,6 +48,28 @@
       </div>
     </div>
   </nav>
+  <!-- Form -->
+  <div class="form-card">
+    <p class="form-info">Want to get in touch? Have a burning question? Fill out the form below to send me a message and
+      I will get back to you as soon as possible!</p>
+    <form id="contact-form" method="POST">
+      <div class="form-input">
+        <h3 class="form-label">Name:</h3>
+        <input type="text">
+      </div>
+      <div class="form-input">
+        <h3 class="form-label">Email:</h3>
+        <input type="text">
+      </div>
+      <div class="form-input" id="msg-input">
+        <h3 class="form-label">Message:</h3>
+        <input type="text">
+      </div>
+      <button class="submit-btn btn">Submit</>
+    </form>
+
+  </div>
+
 </body>
 
 </html>
