--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,19 +47,25 @@
       </div>
     </div>
   </nav>
-  <div class="row">
-    <div class="col-md-6" id="img-panel">
-      <div class="color-block"></div>
-      <div class="profile-card container-fluid">
-        <img class="profile-img" alt="Profile Image" src="/imgs/avatar.png">
-        <h3 class="profile-name">Justin Diep</h3>
-        <p class="profile-card-bar"></p>
-        <p class="profile-desc">SOFTWARE DEVELOPER</p>
-        <div class="socials-bar">
-          <a class="social-link fab fa-github fa-2x"></a>
-          <a class="social-link fab fa-linkedin fa-2x"></a>
+  <div class="row" id="home-row">
+    <div class="col-md-6 row" id="img-panel">
+      <div class="profile-card col-md-7">
+        <div class="card">
+          <img class="card-img-top profile-img" src="/imgs/avatar.png">
+          <div class="card-body">
+            <h3 class="profile-name">Justin Diep</h3>
+            <p class="profile-card-bar"></p>
+            <p class="profile-desc">SOFTWARE DEVELOPER</p>
+            <div class="socials-bar-wrapper">
+              <div class="socials-bar">
+                <a class="social-link fab fa-github fa-2x"></a>
+                <a class="social-link fab fa-linkedin fa-2x"></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div class="color-block col-md-4"></div>
     </div>
     <div class="col-md-6" id="text-panel">
       <h1>Hello</h1>
@@ -69,7 +75,8 @@
         <a class="btn btn-dark col-md-5 home-btn" id="contact-btn">Contact</a>
       </div>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, harum atque! Excepturi ab deserunt
-        aspernatur iure libero veniam perferendis non in, nam atque tempora laborum recusandae? Accusamus quos illo hic.
+        aspernatur iure libero veniam perferendis non in, nam atque tempora laborum recusandae? Accusamus quos illo
+        hic.
       </p>
     </div>
   </div>
@@ -78,3 +85,12 @@
 </body>
 
 </html>
+
+<!-- <img class="profile-img" alt="Profile Image" src="/imgs/avatar.png">
+<h3 class="profile-name">Justin Diep</h3>
+<p class="profile-card-bar"></p>
+<p class="profile-desc">SOFTWARE DEVELOPER</p>
+<div class="socials-bar">
+  <a class="social-link fab fa-github fa-2x"></a>
+  <a class="social-link fab fa-linkedin fa-2x"></a>
+</div> -->
