--- a/views/home.ejs
+++ b/views/home.ejs
@@ -72,7 +72,7 @@
       <h2>Here's who I am & what I do</h2>
       <div class="col-md-12 home-btns-container">
         <a class="btn col-md-5 home-btn" id="resume-btn">Résumé</a>
-        <a class="btn btn-dark col-md-5 home-btn" id="contact-btn">Contact</a>
+        <a class="btn btn-dark col-md-5 home-btn" id="contact-btn" href="/contact">Contact</a>
       </div>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, harum atque! Excepturi ab deserunt
         aspernatur iure libero veniam perferendis non in, nam atque tempora laborum recusandae? Accusamus quos illo
