--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,75 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
-    rel="stylesheet">
-  <!-- Font Awesome -->
-  <script src="https://kit.fontawesome.com/872a40d2ae.js" crossorigin="anonymous"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
+<%- include('head.ejs') %>
 
-<body style="background-color: #e6dace;">
-  <!-- Navbar -->
-  <nav class="navbar" id="header">
-    <div class="container-fluid">
-      <span class="navbar-brand">Justin Diep</span>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!-- Form -->
-  <div class="form-card">
-    <p class="form-info">Want to get in touch? Have a burning question? Fill out the form below to send me a message and
-      I will get back to you as soon as possible!</p>
-    <form id="contact-form" method="POST">
-      <div class="form-input">
-        <h3 class="form-label">Name:</h3>
-        <input type="text">
-      </div>
-      <div class="form-input">
-        <h3 class="form-label">Email:</h3>
-        <input type="text">
-      </div>
-      <div class="form-input" id="msg-input">
-        <h3 class="form-label">Message:</h3>
-        <input type="text">
-      </div>
-      <button class="submit-btn btn">Submit</>
-    </form>
+  <body style="background-color: #e6dace;">
+    <!-- Navbar -->
+    <%- include('navbar.ejs') %>
+      <!-- Form -->
+      <div class="form-card card">
+        <p class="form-info">Want to get in touch? Have a burning question? Fill out the form below to send me a message
+          and
+          I will get back to you as soon as possible!</p>
+        <form class="" id="contact-form" method="POST">
+          <div class="form-input">
+            <h3 class="form-label">Name:</h3>
+            <input type="text" name="name" required>
+          </div>
+          <div class="form-input">
+            <h3 class="form-label">Email:</h3>
+            <input type="email" name="email" required>
+          </div>
+          <div class="form-input" id="msg-input">
+            <h3 class="form-label" id="msg">Message:</h3>
+            <textarea name="msg"></textarea>
+            </input>
+          </div>
+          <button class="submit-btn btn">Submit</>
+        </form>
 
-  </div>
+      </div>
 
-</body>
+  </body>
 
 </html>
