--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,8 +17,8 @@
                 <div class="socials-bar-wrapper">
                   <div class="socials-bar">
                     <a class="social-link fab fa-github fa-2x" href="https://github.com/justindiep17"></a>
-                    <a class="social-link fab fa-linkedin fa-2x"
-                      href="https://www.linkedin.com/in/justin-diep-962b0a1a3/"></a>
+                    <!-- <a class="social-link fab fa-linkedin fa-2x"
+                      href="https://www.linkedin.com/in/justin-diep-962b0a1a3/"></a> -->
                   </div>
                 </div>
               </div>
