--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
           <h1>Hello!</h1>
           <h2>Nice to meet you, I'm Justin</h2>
           <div class="col-md-12 home-btns-container">
-            <a class="btn col-md-5 home-btn" id="resume-btn" href="/resume.docx"
+            <a class="btn col-md-5 home-btn" id="resume-btn" href="/JustinDiep.pdf"
               download="Justin_Diep_résumé">Résumé</a>
             <a class="btn btn-dark col-md-5 home-btn" id="contact-btn" href="/contact">Contact</a>
           </div>
